# open4k

./: .dockerignore  .gitignore  .gitreview  Dockerfile  Known-Issues.md  Makefile  PROJECT  README.org  api_mapper.yaml  demo.org  go.mod  kopf-session-timeout.path  main.go  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  tox_install.sh  uwsgi.ini
api/v1alpha1/: cloud_types.go  flavor_types.go  floatingip_types.go  groupversion_info.go  image_types.go  instance_types.go  network_types.go  port_types.go  securitygroup_types.go  zz_generated.deepcopy.go
charts/openstack-operator/: Chart.yaml  values.yaml
config/: install.yaml
config/crd/: kustomization.yaml
config/default/: kopfpeering.yaml  kustomization.yaml
config/manager/: kustomization.yaml  manager.yaml
config/rbac/: cloud_editor_role.yaml  cloud_viewer_role.yaml  flavor_editor_role.yaml  flavor_viewer_role.yaml  floatingip_editor_role.yaml  floatingip_viewer_role.yaml  image_editor_role.yaml  image_viewer_role.yaml  instance_editor_role.yaml  instance_viewer_role.yaml  network_editor_role.yaml  network_viewer_role.yaml  port_editor_role.yaml  port_viewer_role.yaml  role.yaml  securitygroup_editor_role.yaml  securitygroup_viewer_role.yaml
config/samples/: kustomization.yaml  open4k_v1alpha1_cloud.yaml  open4k_v1alpha1_flavor.yaml  open4k_v1alpha1_floatingip.yaml  open4k_v1alpha1_image.yaml  open4k_v1alpha1_instance.yaml  open4k_v1alpha1_network.yaml  open4k_v1alpha1_port.yaml  open4k_v1alpha1_securitygroup.yaml
docs/source/: conf.py  index.rst
examples/: flavor.yaml  floatingip.yaml  image.yaml  instance.yaml  job.yaml  open4k.yaml  secret.yaml
open4k/: batch_health.py  cache.py  ceph_api.py  client.py  constants.py  exception.py  health.py  hooks.py  kube.py  layers.py  openstack_utils.py  resource.py  secrets.py  settings.py  utils.py  version.py
open4k/admission/: controller.py  schemas.json  wsgi.py
open4k/cli/: ensure_shared_resources.py  import_resources.py  job_rerun.py  set_workload_state.py
open4k/controllers/: __init__.py  flavor.py  (+13 more)
telemetry/: cirros.yaml  environment.yaml  readme  template.yaml
templates/: controller.py.tpl  controllers_init.py.tpl  rbac.tpl
tests/: functional.sh  generate_crd_fixtures.py
tools/: api_mapper.py  run_with_service_account.sh  update_dev_os_sdk_light.sh
(+224 files in other folders)
