[metadata]
name = open4k
author = Mirantis Inc
author-email = oscore-dev@mirantis.com
summary = A tool for managing OpenStack resources via Kubernetes API
description-file =
    README.org
home-page = https://github.com/pshchelo/open4k
classifier =
    Development Status :: 1 - Alpha
    Environment :: Kubernetes
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
python-requires = >= 3.7
setup_requires =
    pbr

[files]
packages =
    open4k

[entry_points]
console_scripts =
    import_resources = open4k.cli.import_resources:main
wsgi_scripts =
    admission_controller = open4k.admission.wsgi:main

[extras]
test =
    pytest
    pytest-mock
    flake8<3.8
    black
    pytest-cov
    pytest-asyncio
    black
